--- a/src/lib/assets/style.css
+++ b/src/lib/assets/style.css
@@ -144,3 +144,20 @@ li {
 	border-radius: 4px;
 	background-color: #f3f3f4;
 }
+
+.filled-button {
+	all: unset;
+	background-color: #1187e0;
+	border-radius: 10px;
+	color: #fff;
+	padding: 0.8rem 5rem;
+	font-size: 14px;
+	font-weight: 500;
+	letter-spacing: 0.25px;
+}
+.filled-button:hover {
+	background-color: #2f91db;
+}
+.filled-button:active {
+	background-color: #0f83db;
+}
